--- a/Algorithms for Data Science/HW3/HW3.ipynb
+++ b/Algorithms for Data Science/HW3/HW3.ipynb
@@ -60,22 +60,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of        label  pixel0  pixel1  pixel2  pixel3  pixel4  pixel5  pixel6  pixel7  \\\n",
+       "0          1       0       0       0       0       0       0       0       0   \n",
+       "1          0       0       0       0       0       0       0       0       0   \n",
+       "2          1       0       0       0       0       0       0       0       0   \n",
+       "3          4       0       0       0       0       0       0       0       0   \n",
+       "4          0       0       0       0       0       0       0       0       0   \n",
+       "...      ...     ...     ...     ...     ...     ...     ...     ...     ...   \n",
+       "41995      0       0       0       0       0       0       0       0       0   \n",
+       "41996      1       0       0       0       0       0       0       0       0   \n",
+       "41997      7       0       0       0       0       0       0       0       0   \n",
+       "41998      6       0       0       0       0       0       0       0       0   \n",
+       "41999      9       0       0       0       0       0       0       0       0   \n",
+       "\n",
+       "       pixel8  ...  pixel774  pixel775  pixel776  pixel777  pixel778  \\\n",
+       "0           0  ...         0         0         0         0         0   \n",
+       "1           0  ...         0         0         0         0         0   \n",
+       "2           0  ...         0         0         0         0         0   \n",
+       "3           0  ...         0         0         0         0         0   \n",
+       "4           0  ...         0         0         0         0         0   \n",
+       "...       ...  ...       ...       ...       ...       ...       ...   \n",
+       "41995       0  ...         0         0         0         0         0   \n",
+       "41996       0  ...         0         0         0         0         0   \n",
+       "41997       0  ...         0         0         0         0         0   \n",
+       "41998       0  ...         0         0         0         0         0   \n",
+       "41999       0  ...         0         0         0         0         0   \n",
+       "\n",
+       "       pixel779  pixel780  pixel781  pixel782  pixel783  \n",
+       "0             0         0         0         0         0  \n",
+       "1             0         0         0         0         0  \n",
+       "2             0         0         0         0         0  \n",
+       "3             0         0         0         0         0  \n",
+       "4             0         0         0         0         0  \n",
+       "...         ...       ...       ...       ...       ...  \n",
+       "41995         0         0         0         0         0  \n",
+       "41996         0         0         0         0         0  \n",
+       "41997         0         0         0         0         0  \n",
+       "41998         0         0         0         0         0  \n",
+       "41999         0         0         0         0         0  \n",
+       "\n",
+       "[42000 rows x 785 columns]>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import additional libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, validation_curve\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
     "\n",
-    "# import dataset\n"
+    "# import dataset\n",
+    "mnist_df = pd.read_csv('train.csv')\n",
+    "mnist_df.head"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Image</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Image\n",
+       "0  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...\n",
+       "1  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...\n",
+       "2  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...\n",
+       "3  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...\n",
+       "4  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,..."
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Type code here for part 1 ##"
+    "## Type code here for part 1 ##\n",
+    "mnist_df_reshaped = pd.DataFrame({\n",
+    "    \"Image\": [row.values.reshape((28, 28)) for _, row in mnist_df.iloc[:, 1:].iterrows()]\n",
+    "})\n",
+    "\n",
+    "# Add the label column back as the first column\n",
+    "mnist_df_reshaped.insert(0, \"Label\", mnist_df.iloc[:, 0])\n",
+    "print(mnist_df_reshaped.head())"
    ]
   },
   {
@@ -499,11 +627,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.1 64-bit",
+   "display_name": "base",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -516,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
